# adventofcode

./: .gitignore  CMakeLists.txt  README.md  SystemManager.cpp  SystemManager.h  main.cpp
03-12-2023/: CMakeLists.txt  main.cpp
Day1/: CMakeLists.txt  day1-part1.cpp  main.cpp  part2.cpp
Day2/: CMakeLists.txt  day2-part1.cpp  day2-part2.cpp  day2.cpp
Day3/: CMakeLists.txt  day3-part1.cpp  day3-part2.cpp
include/: IFactory.h  IReader.h  ISolver.h
inputs/: day6
src/: SystemManager.cpp  SystemManager.h
src/days/ISolver/: ISolver.cpp
src/days/day1/: day1.cpp  day1.h
src/days/day2/: day2.cpp  day2.h
src/days/day3/: day3.cpp  day3.h
src/days/day4/: day4.cpp  day4.h
src/days/day5/: day5.cpp  day5.h
src/days/day6/: IOperator.cpp  IOperator.h  day6.cpp  day6.h
src/days/day7/: day7.cpp  day7.h
src/utils/: Factory.cpp  Factory.h  Reader.cpp  Reader.h
utils/: Reader.cpp  Reader.h
